# CMakePackages

./: .gitignore  CMakeLists.txt  CMakePackage.doxy  CommonBuild.cmake  CommonUse.cmake  Doxyfile  DoxygenLayout.xml  DoxygenMainPage.dox  README.md  WaTools.doxy  XX.doxy  buid.sh  component.py  create.bat  create.sh  create_component.py  create_docu.sh  create_native.sh  docu.sh  index.html  mainpage.dox  test_dsigner.sh  update.sh  windows_llvm_mingw_update.bat  windows_mingw_update.bat  windows_msvc_update.bat
DesignerPlugin/: CMakeLists.txt  DesignerPlugin.cpp  DesignerPlugin.h  InterfaceAbstract.cpp  InterfaceAbstract.h  InterfaceQMenuBar.cpp  InterfaceQMenuBar.h  InterfaceQToolBar.cpp  InterfaceQToolBar.h
DesignerPlugin/xml/: QMenuBar.xml  QToolBar.xml
QtDesignerPlugin/: CMakeLists.txt  WaToolsDesigner.cpp  WaToolsQtDesigner.h  WaToolsQtDesigner.precompiled.h
QtDesignerPlugin/Gui/: AnalogClock.cpp  AnalogClock.h  PopulatedMenuBar.cpp  PopulatedMenuBar.h  PopulatedToolBar.cpp  PopulatedToolBar.h
RtMidi/: CMakeLists.txt  README.md  RtMidiConfig.cmake  RtMidiExportDef.h
WaMusic/: CMakeLists.txt  MidiCommon.h  MidiFile.h  MidiInterfaceInput.h  MidiInterfaceOutput.h  MidiParser.h  MidiParser.hpp  Note.h  Scale.h  TimeCode.h  WaMusicConfig.cmake
WaMusic/src/: MidiCommon.cpp  (+6 more)
WaQt/: .gitignore  CMakeLists.txt  DockTools.h  DockTools_mac.mm  Look.h  ManagedGraphicsView.h  ManagedTableView.h  ManagedTableView.hpp  ManagedTreeView.h  ManagedTreeView.hpp  MessageBar.h  MessageBar.hpp  MessageHandler.h  MessageLabel.h  MessageLabel.hpp  MessageModel.h  PopulatedMainWindow.h  PopulatedMainWindow.hpp  QuickWidget.h  RecentFiles.h  ShellClient.h  ShellClient.hpp  WaQtConfig.cmake  functions.cmake
WaToolsApplication/: ActionPopulation.h  CMakeLists.txt  PopulatedAbstract.h  PopulatedAbstract.hpp  PopulatedMainWidget.h  PopulatedMainWidget.hpp  PopulatedMainWindow.h  PopulatedMainWindow.hpp  PopulatedMenuBar.h  PopulatedToolBar.h  README.md  RecentFiles.h  RecentFiles.hpp  Settings.h  WaToolsApplicationConfig.cmake  WaToolsApplicationExportDef.h
WaToolsAudio/: CMakeLists.txt  FastFourierTransfrom.h  README.md  SampleAbstract.h  SampleReader.h  SampleWave.h  SampleWriter.h  Spectrogram.h  WaToolsAudioConfig.cmake  WaToolsAudioExportDef.h
WaToolsCore/: ByteConversion.h  CMakeLists.txt  DataStore.h  FileTools.h  Info.h  ShallowCrypt.h  SharedData.h  SharedData.hpp  ShellClient.h  Singleton.h  Singleton.hpp  WaToolsCoreConfig.cmake  WaToolsCoreExportDef.h
WaToolsGeneral/: CMakeLists.txt  CompileTimeString.h  CompileTimeString.hpp  DoubleBuffer.h  DoubleBuffer.hpp  FileTools.h  FunctionCaller.h  FunctionCaller.hpp  Locker.h  Matrix.h  Pool.h  README.md  Range.h  Range.hpp  ShallowCrypt.h  ShallowCrypt.hpp  Shared.hpp  Size.h  WaToolsGeneralConfig.cmake  WaToolsGeneralExportDef.h
WaToolsLog/: CMakeLists.txt  LogFile.h  LogFile.hpp  LogSymbol.h  Logger.h  MessageHandler.h  MessageHandler.hpp  README.md  WaLogConfig.cmake  WaToolsLogConfig.cmake  WaToolsLogExportDef.h
WaToolsMath/: CMakeLists.txt  MathGeneral.h  MathGeneral.hpp  MathQtStreaming.h  MathQuaternion.h  MathVector3.h  MathVector3.hpp  MathWave.h  README.md  WaToolsMathConfig.cmake  WaToolsMathExportDef.h
WaToolsNetwork/: AuthProviderOAuth.h  AuthProviderToken.h  CMakeLists.txt  NetworkExceptions.h  NetworkExceptions.hpp  NetworkSettings.h  NetworkSettings.hpp  NetworkTools.h  OscMessage.h  OscMessage.hpp  README.md  RestApiAsync.h  RestApiBlocking.h  RestApiBlocking.hpp  RestApiException.h  RestApiResult.h  SecureNetworkClient.h  SecureNetworkServer.h  SecureNetworkSocket.h  Shared.h  WaNetworkConfig.cmake  WaToolNetworkExportDef.h  WaToolsNetworkConfig.cmake  WaToolsNetworkExportDef.h
WaToolsQt/: ActionPopulation.h  CMakeLists.txt  ColorSpace.h  Info.h  Look.h  ManagedGraphicsView.h  ManagedTableView.h  ManagedTableView.hpp  ManagedTreeView.h  MessageLabel.h  MessageModel.h  PopulatedMainWindow.h  QmlWidget.h  RecentFiles.h  ShellClient.h  TabStackModel.h  TabStackWidget.h  WaQtConfig.cmake  WaToolsQtConfig.cmake  WaToolsQtExportDef.h  functions.cmake
WaToolsWidgets/: ActionPopulation.h  CMakeLists.txt  LocalTextBrowser.h  Look.h  ManagedGraphicsView.h  ManagedGraphicsView.hpp  ManagedTableView.h  ManagedTreeView.h  ManagedTreeView.hpp  MessageLabel.h  PopulatedMainWindow.h  ProjectSettings.h  QmlWidget.h  README.md  RecentFiles.h  Settings.h  TabStackModel.h  TabStackWidget.h  WaToolsWidgetsConfig.cmake  WaToolsWidgetsExportDef.h
XXAudio/: CMakeLists.txt  README.md  XXAudio.dox  XXAudioConfig.cmake  XXAudioExportDef.h  XXFastFourierTransfrom.h  XXSampleAbstract.h  XXSampleReader.h  XXSampleWave.h  XXSampleWriter.h  XXSpectrogram.h
XXCore/: CMakeLists.txt  README.md  XXByteConversion.h  XXByteConversion.hpp  XXByteFours.h  XXCore.dox  XXCoreConfig.cmake  XXCoreExportDef.h  XXDataStore.h  XXFileTools.h  XXInfo.h  XXSettings.h  XXShallowCrypt.h  XXSharedData.h  XXSharedData.hpp  XXShellClient.h  XXSingleton.h  XXSingleton.hpp
XXGui/: CMakeLists.txt  README.md  XXBusyCursor.h  XXColorSpace.h  XXDeviceTools.h  XXDeviceTools.hpp  XXGui.dox  XXGui.md  XXGuiConfig.cmake  XXGuiExportDef.h  XXLoggerModel.h  XXMessageModel.h  XXOscMessage.h  XXQmlView.h  XXRainbow.h
XXNetwork/: CMakeLists.txt  README.md  XXAuthProviderOAuth.h  XXAuthProviderToken.h  XXNetwork.dox  XXNetwork.md  XXNetworkConfig.cmake  XXNetworkExportDef.h  XXNetworkSettings.h  XXNetworkTools.h  XXRestApiAsync.h  XXRestApiBlocking.h  XXRestApiException.h  XXRestApiResult.h  XXSecureNetworkClient.h  XXSecureNetworkServer.h  XXSecureNetworkSocket.h  XXShared.h  XXShared.hpp
XXQuick/: CMakeLists.txt  XXQmlView.cpp  XXQmlView.h  XXQuick.md  XXQuickConfig.cmake  XXQuickExportDef.h
XXWidgets/: CMakeLists.txt  README.md  XXLocalTextBrowser.h  XXLoggerLabel.h  XXLook.h  XXManagedGraphicsView.h  XXManagedGraphicsView.hpp  XXManagedTableView.h  XXManagedTableView.hpp  XXManagedTreeView.h  XXManagedTreeView.hpp  XXMessageLabel.h  XXQmlWidget.h  XXTabStackModel.h  XXTabStackWidget.h  XXWidgets.dox  XXWidgets.md  XXWidgetsConfig.cmake  XXWidgetsExportDef.h
(+496 files in other folders)
