cmake_minimum_required(VERSION 3.20)
project(WaTools LANGUAGES CXX)

set(CMAKE_SUPPRESS_DEVELOPER_WARNINGS TRUE)

find_package(Qt6 REQUIRED)
set(VERSION_FILE ${CMAKE_CURRENT_LIST_DIR}/lib/versions.txt)
file(WRITE ${VERSION_FILE} "CMake ${CMAKE_VERSION}Qt6\n")
file(APPEND ${VERSION_FILE} "Qt6 ${Qt6_VERSION}\n")

add_subdirectory(RtMidi)
add_subdirectory(WaToolsAudio)
add_subdirectory(WaToolsCore)
add_subdirectory(WaToolsGeneral)
add_subdirectory(WaToolsGui)
add_subdirectory(WaToolsLog)
add_subdirectory(WaToolsMath)
add_subdirectory(WaToolsMusic)
add_subdirectory(WaToolsNetwork)
add_subdirectory(WaToolsWidgets)